Separate blocks with blank lines, and make sure spacing is correct.

--- a/css/ndt-test.css
+++ b/css/ndt-test.css
@@ -7,6 +7,7 @@ body * {
   margin: 0;
   padding: 0;
 }
+
 body {
   margin: 0;
   padding: 0;
@@ -14,9 +15,11 @@ body {
   overflow: hidden;
   height: 2000px;
 }
+
 a img {
   border: 0;
 }
+
 #widget {
   position: relative;
   width: 720px;
@@ -29,20 +32,25 @@ a img {
   font-family: "League Gothic", Impact, "Arial Narrow", sans-serif;
   margin-bottom: 15px;
 }
+
 .header {
   margin: 10px;  
 }
+
 #warning-environment {
   color: orange;
   margin: 5px;
 }
+
 #warning-plugin, #warning-websocket {
   color: red;
   margin: 5px;
 }
+
 #start-button {
   padding-top: 180px;
 }
+
 .page {
   width: 640px;
   height: 420px;
@@ -53,18 +61,18 @@ a img {
   background-color: #fff;
   color: #000;
 }
+
 #welcome {
   text-align: center;
 }
+
 #test, #results {
   display: none;
 }
+
 #test {
   background-color: #fff;
 }
-
-
-/* Base styles */
 
 h1, h2, h3 {
   position: relative;
@@ -72,19 +80,24 @@ h1, h2, h3 {
   padding: 0;
   font-weight: normal;
 }
+
 h1 {
   font-size: 72px;
 }
+
 h2 {
   font-size: 48px;
 }
+
 h2 em {
   font-style: normal;
   color: #ccc;
 }
+
 h2.centered {
   text-align:center;
 }
+
 h3 {
   font-size: 36px;
 }
@@ -100,9 +113,11 @@ h3 {
   cursor: pointer;
   text-decoration: none;
 }
+
 .button:hover {
   background-color: #000;
 }
+
 .controls .button {
   -moz-box-shadow: 0 3px 5px #000;
 }
@@ -115,16 +130,13 @@ h3 {
 }
 
 .active {
-  background-color:black;
+  background-color: black;
 }
 
 .backendButton:disabled {
-  background-color:gray;
+  background-color: gray;
   cursor: default;
 }
-
-
-/* Welcome page */
 
 .page .status,
 .page .controls {
@@ -134,10 +146,12 @@ h3 {
   bottom: 40px;
   text-align: center;
 }
+
 body.initializing .page .controls,
 body.ready .page .status {
   display: none;
 }
+
 body.ready .page .controls,
 body.initializing .page .status {
   display: block;
@@ -148,41 +162,44 @@ body.initializing .page .status {
   text-transform: none;
   font: 13px/18px verdana, helvetica, arial, sans-serif;
 }
+
 #welcome .info .logo {
   margin-bottom: 30px;
 }
+
 #welcome .info p {
   margin-bottom: 20px;
 }
+
 #welcome .info a {
   color: white;
   font-weight: bold;
 }
-
-
-/* Test */
 
 #test .locations {
   width: 640px;
   position: absolute;
   left: 40px;
   top: 400px;
-  /*color: white;*/
   font-size: 32px;
   line-height: 32px;
 }
+
 #test .location {
   position: absolute;
   top: 0;
 }
+
 #test .location.local {
   right: 0;
   text-align: right;
 }
+
 #test .location.remote {
   left: 0;
   text-align: left;
 }
+
 #test .location .address {
   margin-top: 10px;
   color: black;
@@ -219,11 +236,10 @@ body.initializing .page .status {
   color: black;
 }
 
-/* Test results */
-
 #results {
   height: 400px;
 }
+
 #result-pages {
   width: 640px;
   height: 280px;
@@ -231,6 +247,7 @@ body.initializing .page .status {
   left: 40px;
   top: 100px;
 }
+
 #result-pages .result-page {
   width: 640px;
   height: 280px;
@@ -239,20 +256,23 @@ body.initializing .page .status {
   top: 0;
   display: none;
 }
+
 #results.summary #result-pages .result-page.summary,
 #results.details #result-pages .result-page.details,
 #results.advanced #result-pages .result-page.advanced {
   display: block;
 }
-#result-pages .details,
-#result-pages .advanced {
+
+#result-pages .details, #result-pages .advanced {
   overflow: auto; 
   text-transform: none;
   font: 13px/18px verdana, arial, helvetica, sans-serif;
 }
+
 #result-pages .advanced {
   white-space: pre;
 }
+
 #results .result {
   width: 268px;
   height: 180px;
@@ -261,31 +281,38 @@ body.initializing .page .status {
   padding: 20px;
   border: 1px solid #ccc;
 }
+
 #results .result .number {
   font-size: 100px;
   line-height: 128px;
 }
+
 #results .result .units {
   font-size: 48px;
   text-transform: none;
 }
+
 #results .upload {
   left: 0;
 }
+
 #results .download {
   right: 0;
 }
+
 #results .other {
   position: absolute;
   top: 240px;
   text-transform: none;
   font: 13px/18px verdana, arial, helvetica, sans-serif;
 }
+
 #results .controls {
   width: 320px;
   left: 360px;
   text-align: right;
 }
+
 #results .branding {
   position: absolute;
   width: 320px;
@@ -294,10 +321,10 @@ body.initializing .page .status {
   text-transform: none;
   font: 11px/16px verdana, arial, helvetica, sans-serif;
 }
+
 #results .branding a {
   color: black;
 }
-
 
 #results .view-selector {
   position: absolute;
@@ -306,6 +333,7 @@ body.initializing .page .status {
   font-size: 18px;
   line-height: 18px;
 }
+
 #results .view-selector .summary {
   border-width: 2px 1px 2px 2px;
   padding-right: 15px;
@@ -313,6 +341,7 @@ body.initializing .page .status {
   -webkit-border-radius: 15px 0 0 15px;
   border-radius: 15px 0 0 15px;
 }
+
 #results .view-selector .details {
   border-width: 2px 1px;
   padding-left: 15px;
@@ -321,6 +350,7 @@ body.initializing .page .status {
   -webkit-border-radius: 0;
   border-radius: 0;
 }
+
 #results .view-selector .advanced {
   border-width: 2px 2px 2px 1px;
   padding-left: 15px;
@@ -328,10 +358,9 @@ body.initializing .page .status {
   -webkit-border-radius: 0 15px 15px 0;
   border-radius: 0 15px 15px 0;
 }
+
 #results.summary .view-selector .summary,
 #results.details .view-selector .details,
 #results.advanced .view-selector .advanced {
   background-color: #000;
 }
-
-
